--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,4 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [project.scripts]
-roo = "scrapechecker.scrapers.contest_monitor:main"
+roo = "scrapechecker.contest.contest_monitor:main"
